--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "axios": "^0.18.0",
     "date-fns": "^1.30.1",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
+    "path": "^0.12.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.3",
